Fixed the way to deploy Allure report to Github pages

--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -59,9 +59,11 @@ jobs:
           path: target/site/allure-maven-plugin
 
   deploy:
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     needs: test
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
       - name: Download Allure Report artifact
