Added printing url with Allure report to deploy job log

--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -83,3 +83,8 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
           publish_dir: allure-report
+
+      - name: Add Pages URL to summary
+        run: |
+            echo "### ✅ Allure report is live" >> $GITHUB_STEP_SUMMARY
+            echo "${{ steps.deployment.outputs.page_url }}" >> $GITHUB_STEP_SUMMARY
